--- a/index.html
+++ b/index.html
@@ -9,8 +9,70 @@
 </head>
 
 <body>
+    <nav>
+        <div class="nav-left">Logo</div>
+        <div class="nav-right">
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#duck">Talk to the duck</a></li>
+                <li><a href="#emergency">Emergency Kit</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
+    <header id="home">
+        <h1>Hello World</h1>
+        <p>Introduction text</p>
+    </header>
+    <main>
+        <section id="duck">
+            <div id="text">
+                <h2>Talk too the duck</h2>
+                <p>Quack</p>
+            </div>
+            <div class="duck">
+                <a href="https://rubberduckdebugging.com/">
+                    <img src="./src/img/lilalu-quietscheente-gelb-yellow-rubber-duck-HL.png" alt="a yellow rubber duck">
+                </a>
+            </div>
+        </section>
+        <section id="emergency">
+            <h2>Emergency Kits</h2>
+            <div class="grid-container">
+                <a href="https://discordapp.com/channels/641221910146842644/641593560394760200">
+                    <div class="grid-item">Discord</div>
+                </a>
+                <a href="https://stackoverflow.com">
+                    <div class="grid-item">Stack Overflow</div>
+                </a>
+                <a href="https://developer.mozilla.org">
+                    <div class="grid-item">MDN</div>
+                </a>
+                <a href="https://www.w3schools.com">
+                    <div class="grid-item">W3</div>
+                </a>
+                <a href="https://medium.com">
+                    <div class="grid-item">Medium</div>
+                </a>
+                <a href="https://www.codenewbie.org/podcast">
+                    <div class="grid-item">Podcast</div>
+                </a>
+            </div>
 
-    <script src="./src/style.css"></script>
+        </section>
+    </main>
+    <footer id="contact">
+        <h2>Contact us</h2>
+        <form action="">
+            <input type="text" />
+            <textarea name="" id="" cols="30" rows="10"></textarea>
+            <button>Submit</button>
+        </form>
+        <h3>proudly created by Tyrosius</h3>
+        <a href="https://github.com/Tyrosius"><img src="./src/img/git-hub-300x300.png" alt="the github icon"></a>
+
+    </footer>
+    <script src="./src/index.js"></script>
 </body>
 
 </html>
