--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <textarea name="" id="" cols="30" rows="10"></textarea>
             <button>Submit</button>
         </form>
-        <h3>proudly created by Tyrosius</h3>
+        <h3>Proudly created by Tyrosius</h3>
         <a href="https://github.com/Tyrosius"><img src="./src/img/git-hub-300x300.png" alt="the github icon"></a>
 
     </footer>
